Improve docs, match API usage examples with current API